# AI-Resume-Enhancer

./: .replit  README.md  app.py  deploy_requirements.txt  gemini_service.py  pdf_parser.py  pyproject.toml  replit.md  requirements.txt  requirements_for_render.txt  routes.py
attached_assets/: Pasted--Perform-a-deployment-readiness-audit-for-a-Python-web-app-that-will-run-on-Render-The-project-was-1757181580689_1757181580690.txt  Pasted-Build-a-complete-full-stack-web-app-called-Smart-Resume-Reviewer-using-Python-Flask-or-FastAPI--1757168223774_1757168223776.txt
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html  results.html
uploads/: .gitkeep
